Robert/375 enumeration registration rework (#210)
* [375]: Remove new user object from registration response, also some cleanup

* [229]: Update requestRoleChange endpoint method to update a target user instead of the currently logged-in user

* [375]: Group existing UserAccountManager tests

* [375]: Additional unit testing for updated createNewUser method

* [375]: Update UsersFacadeIT for requestRoleChange method

* [375]: Some clarification in validation of required fields for registration

* [375]: Add email to notify account owner of a duplicate registration request

* [375]: Clean up some linting issues, reworked email validation regex pattern