@@ -18,11 +18,12 @@ package uk.ac.cam.cl.dtg.isaac.api;
 
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SEGUE_SERVER_LOG_TYPES;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import uk.ac.cam.cl.dtg.segue.api.Constants.LogType;
 
 /**
@@ -49,7 +50,7 @@ public final class Constants {
   public static final String HIDE_FROM_FILTER_TAG = "nofilter";
   public static final String RELATED_CONTENT_FIELDNAME = "relatedContent";
 
-  public static final Set<String> SITE_WIDE_SEARCH_VALID_DOC_TYPES = ImmutableSet.of(
+  public static final Set<String> SITE_WIDE_SEARCH_VALID_DOC_TYPES = Set.of(
       QUESTION_TYPE, CONCEPT_TYPE, TOPIC_SUMMARY_PAGE_TYPE, PAGE_TYPE, EVENT_TYPE);
 
   public static final int NUMERIC_QUESTION_DEFAULT_SIGNIFICANT_FIGURES = 2;
@@ -175,13 +176,10 @@ public final class Constants {
   public static final Set<String> ISAAC_CLIENT_LOG_TYPES =
       Arrays.stream(IsaacClientLogType.values()).map(IsaacClientLogType::name).collect(Collectors.toSet());
 
-  public static final Set<String> ALL_ACCEPTED_LOG_TYPES = new HashSet<String>() {
-    {
-      addAll(SEGUE_SERVER_LOG_TYPES);
-      addAll(ISAAC_SERVER_LOG_TYPES);
-      addAll(ISAAC_CLIENT_LOG_TYPES);
-    }
-  };
+  public static final Set<String> ALL_ACCEPTED_LOG_TYPES =
+      Stream.of(SEGUE_SERVER_LOG_TYPES, ISAAC_SERVER_LOG_TYPES, ISAAC_CLIENT_LOG_TYPES)
+          .flatMap(Collection::stream)
+          .collect(Collectors.toCollection(HashSet::new));
 
   public enum IsaacUserPreferences {
     BETA_FEATURE, EXAM_BOARD, PROGRAMMING_LANGUAGE, BOOLEAN_NOTATION, DISPLAY_SETTING
@@ -202,6 +200,7 @@ public final class Constants {
   public static final String EMAIL_TEMPLATE_TOKEN_EVENT_DETAILS = "event.emailEventDetails";
   public static final String EMAIL_TEMPLATE_TOKEN_EVENT = "event";
   public static final String EMAIL_TEMPLATE_TOKEN_EVENT_URL = "eventURL";
+  public static final String EMAIL_TEMPLATE_TOKEN_PROVIDER = "provider";
 
   // Email Template Ids
   public static final String EMAIL_TEMPLATE_ID_EVENT_BOOKING_CONFIRMED = "email-event-booking-confirmed";
@@ -233,6 +232,7 @@ public final class Constants {
   public static final String EXCEPTION_MESSAGE_NOT_EVENT = "Content object is not an event page.";
   public static final String EXCEPTION_MESSAGE_CANNOT_CREATE_BOOKING_DTO =
       "Unable to create event booking DTO from DO.";
+  public static final String EXCEPTION_MESSAGE_INVALID_EMAIL = "The email address provided is invalid.";
 
   /**
    * Private constructor to prevent this class being created.
